# Python.Exercicios

./: LICENSE  README.md  bootstrap.py  pyproject.toml
