[project]
name = "python-exercicios"
version = "0.1.0"
description = "Exercícios Python"
authors = [
    {name = "Lucas Braga",email = "lucascarvalhobraga34@gmail.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
]

[tool.poetry]
packages = [{include = "python"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
